<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proprog.musicapp.FavoriteActivity">

    <TextView
        android:id="@+id/desc_favorite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/favorite_desc_string"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_favorite_text"
        android:orientation="vertical">

        <Button
            android:id="@+id/favorite_allsongs"
            style="@style/btn_style"
            android:text="@string/all_songs_string" />

        <Button
            android:id="@+id/favorite_albums"
            style="@style/btn_style"
            android:text="@string/albums_string" />

        <Button
            android:id="@+id/favorite_genres"
            style="@style/btn_style"
            android:text="@string/genres_string" />
    </LinearLayout>

</RelativeLayout>
