<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.proprog.musicapp.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:id="@+id/all_songs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/headphones" />

            <TextView
                android:id="@+id/all_songs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/image_play"
                android:text="@string/all_songs_string"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/num_all_songs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/all_songs_text"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/image_play"
                android:text="@string/num_all_songs_string"
                android:textColor="@color/secondaryText"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:src="@drawable/play" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_margin="4dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/favorite_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/favorite_image"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:scaleType="centerCrop"
                android:src="@drawable/favorite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/favorite_image"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/favorite_string" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/favorite_image"
                android:src="@drawable/lovesong" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/albums_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/albums__image"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:scaleType="centerCrop"
                android:src="@drawable/albums" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/albums__image"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/albums_string" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/albums__image"
                android:src="@drawable/albumsong" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/genres_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/genres_image"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:scaleType="centerCrop"
                android:src="@drawable/genres" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/genres_image"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/genres_string" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/genres_image"
                android:src="@drawable/genresong" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_upgrade"
        android:text="@string/upgrade_string"
        android:layout_margin="24dp"
        style="@style/btn_style"/>

</LinearLayout>
